--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
     <footer>
         <p>Produzido por Lorayne Penteado Pereira</p>
     </footer>
+    <script src="main.js"></script>
+
 
 </body>
 </html>
